k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ergo
  labels:
    name: ergo
    environment: base
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    istio-injection: enabled
