k8s/base/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ergo-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ergo-site
  template:
    metadata:
      labels:
        app: ergo-site
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
      - name: prod-ghcr-login
      containers:
      - name: ergo-site
        image: ghcr.io/tdk-soft/ergo-maffo-cloud-native/ergo-site:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
