k8s/base/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ergo-service
spec:
  selector:
    app: ergo-site
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
