k8s/base/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ergo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ergo-maffo.tdksoftconsulting.de
      secretName: ergo-tls-cert
  rules:
    - host: ergo-maffo.tdksoftconsulting.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ergo-service
                port:
                  number: 80
