k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ergo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Automatic HTTP -> HTTPS redirection
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Enhanced security (HSTS)
    nginx.ingress.kubernetes.io/hsts: "true"
    # Optimization for large assets (site images)
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ergo-maffo.tdksoftconsulting.de
      secretName: ergo-tls-cert # Cert-manager will store the certificate here
  rules:
    - host: ergo-maffo.tdksoftconsulting.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ergo-service
                port:
                  number: 80
